[package]
name = "sentinel-rag"
version = "0.1.0"
edition = "2021"
description = "RAG (Retrieval Augmented Generation) system for Sentinel AI"

[dependencies]
sentinel-core = { path = "../sentinel-core" }
sentinel-database = { path = "../sentinel-database" }
sentinel-models = { path = "../sentinel-models" }

# RAG dependencies
lancedb = { workspace = true }
rig-core = { workspace = true }
rig-lancedb = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }

# Document parsing
docx-rs = { workspace = true }
pdf-extract = { workspace = true }
pulldown-cmark = { workspace = true }
walkdir = { workspace = true }

# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
base64 = { workspace = true }
