[package]
name = "sentinel-rag"
version = "0.1.0"
edition = "2021"

[lib]
name = "sentinel_rag"
path = "src/lib.rs"

[dependencies]
sentinel-core = { path = "../sentinel-core" }
sentinel-db = { path = "../sentinel-db" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
lancedb = "0.21.3"
arrow-array = "55.2.0"
arrow-schema = "55.2.0"
rig-core = { version = "0.22.0", features = ["derive"] }
rig-lancedb = "0.2.24"
docx-rs = "0.4.17"
pdf-extract = "0.7.9"
pulldown-cmark = "0.12.0"
walkdir = "2.5.0"
regex = "1"
html2text = "0.15.5"
base64 = "0.22"
reqwest = { version = "0.12.0", features = ["json"] }


