[package]
name = "sentinel-rag"
version = "0.1.0"
edition = "2021"

[lib]
name = "sentinel_rag"
path = "src/lib.rs"

[dependencies]
sentinel-core = { path = "../sentinel-core" }
sentinel-db = { path = "../sentinel-db" }

anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# LanceDB and vector search
lancedb = "0.21.3"
arrow-array = "55.2.0"
arrow-schema = "55.2.0"

# HTTP client for embeddings
reqwest = { version = "0.12", features = ["json"] }

# Additional dependencies
md5 = "0.7"
rand = "0.9"
log = "0.4"
rig-core = { version = "0.22.0", features = ["derive"] }
rig-lancedb = "0.2.24"
regex = "1.11"
pulldown-cmark = "0.12"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
