[package]
name = "sentinel-services"
version = "0.1.0"
edition = "2021"
description = "Business services layer for Sentinel AI"

[dependencies]
sentinel-core = { path = "../sentinel-core" }
sentinel-database = { path = "../sentinel-database" }
sentinel-models = { path = "../sentinel-models" }
sentinel-tools = { path = "../sentinel-tools" }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
http = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
