[package]
name = "sentinel-tools"
version = "0.1.0"
edition = "2021"
description = "Tool management system for Sentinel AI"

[dependencies]
sentinel-core = { path = "../sentinel-core" }
sentinel-database = { path = "../sentinel-database" }
sentinel-models = { path = "../sentinel-models" }

# MCP and tool dependencies
rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }

# Network scanning tools
rsubdomain = { workspace = true }
rustscan = { workspace = true }
trust-dns-resolver = { workspace = true }
hickory-resolver = { workspace = true }
tokio-util = { workspace = true }
net2 = { workspace = true }
socket2 = { workspace = true }
ping = { workspace = true }
cidr = { workspace = true }
ipnet = { workspace = true }
semaphore = { workspace = true }
tokio-stream = { workspace = true }

# HTTP and utilities
reqwest = { workspace = true }
http = { workspace = true }
headers = { workspace = true }
mime = { workspace = true }
which = { workspace = true }
tempfile = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }
